tests/conformance/errors/jsx-props.codes
UR2045
UR2042
UR2046
